// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SFileInput.vue can have custom text 1`] = `
<div class="file-input file-input--button">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <!---->

        Custom text
      </div> <span class="file-input__count">0 files selected</span>
    </div>
  </slabel-stub>
  <div class="file-input__info">
    <!---->
    <ul class="file-input__list"></ul>
  </div>
</div>
`;

exports[`SFileInput.vue can have type area 1`] = `
<div class="file-input file-input--area">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <sicon icon="upload-cloud" size="large" class="file-input__icon"></sicon>

        Choose a file
      </div> <span class="file-input__count">0 files selected</span>
    </div>
  </slabel-stub>
  <div class="file-input__info">
    <!---->
    <ul class="file-input__list"></ul>
  </div>
</div>
`;

exports[`SFileInput.vue can have type button 1`] = `
<div class="file-input file-input--button">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <!---->

        Choose a file
      </div> <span class="file-input__count">0 files selected</span>
    </div>
  </slabel-stub>
  <div class="file-input__info">
    <!---->
    <ul class="file-input__list"></ul>
  </div>
</div>
`;

exports[`SFileInput.vue can hide a file count 1`] = `
<div class="file-input file-input--button">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control" multiple="multiple">
      <div class="file-input__display">
        <!---->

        Choose a file
      </div>
      <!---->
    </div>
  </slabel-stub>
  <div class="file-input__info">
    <!---->
    <ul class="file-input__list">
      <schip-stub color="" isclosable="true" isactive="true" tag="li">
        test-file-a.txt
      </schip-stub>
      <schip-stub color="" isclosable="true" isactive="true" tag="li">
        test-file-b.txt
      </schip-stub>
    </ul>
  </div>
</div>
`;

exports[`SFileInput.vue can hide the icon when it's an area 1`] = `
<div class="file-input file-input--area">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <!---->

        Choose a file
      </div> <span class="file-input__count">0 files selected</span>
    </div>
  </slabel-stub>
  <div class="file-input__info">
    <!---->
    <ul class="file-input__list"></ul>
  </div>
</div>
`;

exports[`SFileInput.vue can upload multiple files 1`] = `
<div class="file-input file-input--button">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <!---->

        Choose a file
      </div> <span class="file-input__count">2 files selected</span>
    </div>
  </slabel-stub>
  <div class="file-input__info">
    <!---->
    <ul class="file-input__list">
      <schip-stub color="" isclosable="true" isactive="true" tag="li">
        test-file-a.txt
      </schip-stub>
      <schip-stub color="" isclosable="true" isactive="true" tag="li">
        test-file-b.txt
      </schip-stub>
    </ul>
  </div>
</div>
`;

exports[`SFileInput.vue handles changes to the input 1`] = `
<div class="file-input file-input--button">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <!---->

        Choose a file
      </div> <span class="file-input__count">1 file selected</span>
    </div>
  </slabel-stub>
  <div class="file-input__info">
    <!---->
    <ul class="file-input__list">
      <schip-stub color="" isclosable="true" isactive="true" tag="li">
        test-file-a.txt
      </schip-stub>
    </ul>
  </div>
</div>
`;

exports[`SFileInput.vue renders correctly 1`] = `
<div class="file-input file-input--button">
  <slabel-stub label="File input" isrequired="true" for="file-input">
    <div class="file-input__inner"><input id="file-input" label="File input" name="file-input" type="file" class="file-input__control">
      <div class="file-input__display">
        <!---->

        Choose a file
      </div> <span class="file-input__count">0 files selected</span>
    </div>
  </slabel-stub>
  <div class="file-input__info">
    <!---->
    <ul class="file-input__list"></ul>
  </div>
</div>
`;
